--- a/lumina/docker-compose.yml
+++ b/lumina/docker-compose.yml
@@ -21,7 +21,6 @@ services:
     build: ./image
     restart: always
     environment:
-      SKIP_RECREATE_SCHEMA: N
       MYSQL_HOST: db
       MYSQL_DATABASE: lumina
       MYSQL_USER: lumina
@@ -32,6 +31,7 @@ services:
       VAULT_PORT: 65433
     volumes:
       - ./data/CA/:/opt/lumina/CA/
+      - ./data/logs/:/opt/lumina/logs/
     ports:
       - "443:443"
 
