--- a/hexvault/docker-compose.yml
+++ b/hexvault/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     restart: always
     environment:
       VAULT_HOST: reversing.example.com
+      VAULT_PORT: 65433 # Optional; Default: 65433
     volumes:
       - ./data/CA/:/opt/hexvault/CA/
       - ./data/logs/:/opt/hexvault/logs/
