--- a/lumina/docker-compose.yml
+++ b/lumina/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       MYSQL_USER: lumina
       MYSQL_PASSWORD: lumina
       LUMINA_HOST: reversing.example.com
-      LUMINA_PORT: 443
+      LUMINA_PORT: 443 # Optional; Default: 443
       VAULT_HOST: reversing.example.com
       VAULT_PORT: 65433
     volumes:
