--- a/hexlicsrv/image/Dockerfile
+++ b/hexlicsrv/image/Dockerfile
@@ -6,8 +6,8 @@ COPY hexlicsrv90_x64linux.run /hexlicsrv90_x64linux.run
 COPY entrypoint.sh /entrypoint.sh
 RUN echo -e '\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\ny\n\ny\n\nn\ny\n\n' | /hexlicsrv90_x64linux.run --mode text && \
     rm /hexlicsrv90_x64linux.run && \
-    cp /opt/hexlicsrv/hexlicsrv.conf.example /opt/hexlicsrv/hexlicsrv.conf && \
-    chmod 640 /opt/hexlicsrv/hexlicsrv.conf && \
-    mkdir /opt/hexlicsrv/CA
+    mkdir -p /opt/hexlicsrv/CA && \
+    mkdir -p /opt/hexlicsrv/config && \
+    mkdir -p /opt/hexlicsrv/data
 COPY patch.py /opt/hexlicsrv/patch.py
 ENTRYPOINT [ "/entrypoint.sh" ]
