--- a/hexvault/docker-compose.yml
+++ b/hexvault/docker-compose.yml
@@ -8,8 +8,9 @@ services:
       VAULT_HOST: reversing.example.com
       VAULT_PORT: 65433 # Optional; Default: 65433
     volumes:
-      - ./data/CA/:/opt/hexvault/CA/
-      - ./data/logs/:/opt/hexvault/logs/
-      - ./data/files/:/opt/hexvault/files/
+      - ./CA/:/opt/hexvault/CA/
+      - ./config/:/opt/hexvault/config/
+      - ./logs/:/opt/hexvault/logs/
+      - ./data/:/opt/hexvault/data/
     ports:
       - "65433:65433"
