--- a/hexlicsrv/image/Dockerfile
+++ b/hexlicsrv/image/Dockerfile
@@ -1,13 +1,19 @@
-
 FROM debian:12
+
 EXPOSE 65434
-RUN apt-get update && apt-get install -y python3
-COPY hexlicsrv90_x64linux.run /hexlicsrv90_x64linux.run
+
+RUN apt-get update && \
+    apt-get install -y python3 && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
+
+COPY hexlicsrv90_x64linux.run /tmp/hexlicsrv90_x64linux.run
 COPY entrypoint.sh /entrypoint.sh
-RUN echo -e '\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\ny\n\ny\n\nn\ny\n\n' | /hexlicsrv90_x64linux.run --mode text && \
-    rm /hexlicsrv90_x64linux.run && \
-    mkdir -p /opt/hexlicsrv/CA && \
-    mkdir -p /opt/hexlicsrv/config && \
-    mkdir -p /opt/hexlicsrv/data
 COPY patch.py /opt/hexlicsrv/patch.py
-ENTRYPOINT [ "/entrypoint.sh" ]
+
+RUN chmod +x /entrypoint.sh && \
+    echo -e '\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\ny\n\ny\n\nn\ny\n\n' | /tmp/hexlicsrv90_x64linux.run --mode text && \
+    rm /tmp/hexlicsrv90_x64linux.run && \
+    mkdir -p /opt/hexlicsrv/{CA,config,data}
+
+ENTRYPOINT ["/entrypoint.sh"]
