--- a/hexvault/image/Dockerfile
+++ b/hexvault/image/Dockerfile
@@ -1,13 +1,19 @@
-
 FROM debian:12
+
 EXPOSE 65433
-RUN apt-get update && apt-get install -y python3
-COPY hexvault90_x64linux.run /hexvault90_x64linux.run
+
+RUN apt-get update && \
+    apt-get install -y python3 && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
+
+COPY hexvault90_x64linux.run /tmp/hexvault90_x64linux.run
 COPY entrypoint.sh /entrypoint.sh
-RUN echo -e '\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\ny\n\ny\n\nn\ny\n\n' | /hexvault90_x64linux.run --mode text && \
-    rm /hexvault90_x64linux.run && \
-    mkdir -p /opt/hexvault/CA && \
-    mkdir -p /opt/hexvault/config && \
-    mkdir -p /opt/hexvault/data
 COPY patch.py /opt/hexvault/patch.py
-ENTRYPOINT [ "/entrypoint.sh" ]
+
+RUN chmod +x /entrypoint.sh && \
+    echo -e '\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\ny\n\ny\n\nn\ny\n\n' | /tmp/hexvault90_x64linux.run --mode text && \
+    rm /tmp/hexvault90_x64linux.run && \
+    mkdir -p /opt/hexvault/{CA,config,data}
+
+ENTRYPOINT ["/entrypoint.sh"]
