--- a/hexvault/image/Dockerfile
+++ b/hexvault/image/Dockerfile
@@ -9,7 +9,8 @@ RUN apt-get update && \
 
 COPY hexvault90_x64linux.run /tmp/hexvault90_x64linux.run
 COPY entrypoint.sh /entrypoint.sh
-COPY patch.py /opt/hexvault/patch.py
+COPY sigmak_search.py /opt/hexvault/sigmak_search.py
+COPY patch_version_mismatch.py /opt/hexvault/patch_version_mismatch.py
 
 RUN chmod +x /entrypoint.sh && \
     echo -e '\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\ny\n\ny\n\nn\ny\n\n' | /tmp/hexvault90_x64linux.run --mode text && \
