--- a/hexvault/image/Dockerfile
+++ b/hexvault/image/Dockerfile
@@ -9,6 +9,7 @@ RUN apt-get update && \
 
 COPY hexvault90_x64linux.run /tmp/hexvault90_x64linux.run
 COPY entrypoint.sh /entrypoint.sh
+COPY patch.py /opt/hexvault/patch.py
 COPY sigmak_search.py /opt/hexvault/sigmak_search.py
 COPY patch_version_mismatch.py /opt/hexvault/patch_version_mismatch.py
 
