--- a/hexlicsrv/image/Dockerfile
+++ b/hexlicsrv/image/Dockerfile
@@ -11,7 +11,7 @@ COPY hexlicsrv90_x64linux.run /tmp/hexlicsrv90_x64linux.run
 COPY entrypoint.sh /entrypoint.sh
 COPY patch.py /opt/hexlicsrv/patch.py
 COPY sigmak_search.py /opt/hexlicsrv/sigmak_search.py
-COPY patch_version_mismatch.py /opt/hexlicsrv/patch_version_mismatch.py
+COPY patch2.py /opt/hexlicsrv/patch2.py
 
 RUN chmod +x /entrypoint.sh && \
     echo -e '\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\ny\n\ny\n\nn\ny\n\n' | /tmp/hexlicsrv90_x64linux.run --mode text && \
