--- a/hexlicsrv/image/Dockerfile
+++ b/hexlicsrv/image/Dockerfile
@@ -9,9 +9,7 @@ RUN apt-get update && \
 
 COPY hexlicsrv90_x64linux.run /tmp/hexlicsrv90_x64linux.run
 COPY entrypoint.sh /entrypoint.sh
-COPY main_patch.py /opt/hexlicsrv/main_patch.py
-COPY sigmak_search.py /opt/hexlicsrv/sigmak_search.py
-COPY version_patch.py /opt/hexlicsrv/version_patch.py
+COPY license_patch.py /opt/hexlicsrv/license_patch.py
 
 RUN chmod +x /entrypoint.sh && \
     echo -e '\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\ny\n\ny\n\nn\ny\n\n' | /tmp/hexlicsrv90_x64linux.run --mode text && \
