--- a/lumina/image/Dockerfile
+++ b/lumina/image/Dockerfile
@@ -3,7 +3,7 @@ FROM debian:12
 EXPOSE 443
 
 RUN apt-get update && \
-    apt-get install -y netcat-openbsd python3 && \
+    DEBIAN_FRONTEND=noninteractive apt-get install -y netcat-openbsd python3 git openssh-client zstd jq tar ca-certificates default-mysql-client && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
@@ -14,6 +14,6 @@ COPY license_patch.py /opt/lumina/license_patch.py
 RUN chmod +x /entrypoint.sh && \
     echo -e '\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\ny\n\ny\n\n\n\n\n\n\ny\n\n\nn\ny\n\n' | /tmp/lumina90_x64linux.run --mode text && \
     rm /tmp/lumina90_x64linux.run && \
-    mkdir -p /opt/lumina/{CA,config,data}
+    mkdir -p /opt/lumina/{CA,config,data,logs}
 
 ENTRYPOINT ["/entrypoint.sh"]
