--- a/lumina/docker-compose.yml
+++ b/lumina/docker-compose.yml
@@ -49,26 +49,25 @@ services:
       VAULT_HOST: reversing.example.com
       VAULT_PORT: "65433"
 
-      # Git sync (MySQL dump). Only keep one copy at backups/<GIT_HOST_ID>/*
+      # Git sync (MySQL dump)
       # GIT_SYNC_ENABLED: "true"
-      # GIT_REMOTE: https://github.com/RenardDev/backup.git
+      # GIT_REMOTE: https://github.com/<USERNAME>/<REPO>.git
       # GIT_BRANCH: main
       # GIT_HOST_ID: lumina
       # GIT_CHUNK_SIZE_MB: "49"
-      # GIT_COMMIT_NAME: Lumina DB Backup
+      # GIT_COMMIT_NAME: Lumina DB CI
       # GIT_COMMIT_EMAIL: lumina-db@example.com
+
       # Fine-grained PAT (HTTPS)
       # GIT_AUTH_TOKEN: github_pat_*
+
       # SSH alternative:
-      # GIT_REMOTE: git@github.com:RenardDev/backup.git
+      # GIT_REMOTE: git@github.com:<USERNAME>/<REPO>.git
       # GIT_SSH_PRIVATE_KEY: |-
       #   -----BEGIN OPENSSH PRIVATE KEY-----
       #   ...
       #   -----END OPENSSH PRIVATE KEY-----
       # GIT_KNOWN_HOSTS: github.com ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAI...
-
-      # Auto restart: container will exit after N seconds; Docker restarts it
-      AUTO_RESTART_SECONDS: "21600" # 6 hours
 
     volumes:
       - ./CA:/opt/lumina/CA
