--- a/hexvault/docker-compose.yml
+++ b/hexvault/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       VAULT_HOST: reversing.example.com
       VAULT_PORT: "65433"
 
-      # Git sync (filesystem)
+      # Git sync
       # GIT_SYNC_ENABLED: "true"
       # GIT_REMOTE: https://github.com/<USERNAME>/<REPO>.git
       # GIT_BRANCH: main
