--- a/hexvault/docker-compose.yml
+++ b/hexvault/docker-compose.yml
@@ -11,15 +11,42 @@ services:
       VAULT_HOST: reversing.example.com
       VAULT_PORT: "65433"
 
-      # === Release sync (GitHub Releases) ===
-      # RELEASE_SYNC_ENABLED: "true"
-      # GH_OWNER: RenardDev
-      # GH_REPO: IDATeams
+      # === Sync (Unified) ===
+      # Включить синхронизацию и выбрать метод: commits | releases
+      # SYNC_ENABLED: "true"
+      # SYNC_METHOD: "releases"
+
+      # Общие настройки для обоих методов
+      # URL репозитория (HTTPS или SSH). Примеры:
+      #   https://github.com/RenardDev/IDATeams.git
+      #   git@github.com:RenardDev/IDATeams.git
+      # GH_REMOTE: https://github.com/RenardDev/IDATeams.git
+      # Идентификатор хоста для manifest.json
+      # SYNC_HOST_ID: hexvault
+      # Размер чанка при разбиении архива (МБ)
+      # SYNC_CHUNK_SIZE_MB: "49"
+      # PAT — обязателен для записи и приватных репо/релизов:
+      #   - commits(HTTPS): как x-access-token
+      #   - releases: как Bearer
+      # SYNC_AUTH_TOKEN: github_pat_***
+
+      # --- Commits mode (если SYNC_METHOD=commits) ---
+      # GH_BRANCH: main
+      # GH_COMMIT_NAME: HexVault CI
+      # GH_COMMIT_EMAIL: hexvault@example.com
+      # Для SSH:
+      # GH_SSH_PRIVATE_KEY: |-
+      #   -----BEGIN OPENSSH PRIVATE KEY-----
+      #   ...
+      # GH_KNOWN_HOSTS: |-
+      #   github.com ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAI...
+
+      # --- Releases mode (если SYNC_METHOD=releases) ---
       # GH_RELEASE_TAG: hexvault-snapshot
       # GH_RELEASE_NAME: HexVault FS Snapshot
-      # GH_HOST_ID: hexvault
-      # GH_CHUNK_SIZE_MB: "49"
-      # GH_TOKEN: github_pat_***
+      # Для GitHub Enterprise можно переопределить эндпоинты:
+      # GH_API: https://ghe.example.com/api/v3
+      # GH_UPLOAD: https://ghe.example.com/api/uploads
 
     volumes:
       - ./CA:/opt/hexvault/CA
