--- a/hexlicsrv/docker-compose.yml
+++ b/hexlicsrv/docker-compose.yml
@@ -5,55 +5,42 @@ services:
     container_name: hexlicsrv
     build:
       context: ./image
-    restart: always
+    restart: unless-stopped
     environment:
       # === App ===
       LICENSE_HOST: reversing.example.com
       LICENSE_PORT: "65434"
 
-      # === Sync (Unified) ===
-      # Включить синхронизацию и выбрать метод: commits | releases
+      # === Sync (optional) ===
+      # Enable and choose method: commits | releases
       # SYNC_ENABLED: "true"
       # SYNC_METHOD: "releases"
 
-      # Общие настройки для обоих методов
-      # URL репозитория (HTTPS или SSH). Примеры:
-      #   https://github.com/RenardDev/IDATeams.git
-      #   git@github.com:RenardDev/IDATeams.git
-      # GH_REMOTE: https://github.com/RenardDev/IDATeams.git
-      # Идентификатор хоста (попадает в manifest.json)
+      # Shared options for both methods
+      # GH_REMOTE: https://github.com/yourorg/yourrepo.git
       # SYNC_HOST_ID: hexlicsrv
-      # Размер чанка при разбиении архива (МБ)
       # SYNC_CHUNK_SIZE_MB: "49"
-      # Токен (PAT) — обязателен для записи и приватных репо/релизов.
-      # Для HTTPS-коммитов используется как x-access-token,
-      # для Releases — как Bearer.
-      # SYNC_AUTH_TOKEN: github_pat_***
+      # SYNC_AUTH_TOKEN: github_pat_token_here # required for write access/private repos
 
-      # --- Commits mode (если SYNC_METHOD=commits) ---
+      # --- Commits mode ---
       # GH_BRANCH: main
       # GH_COMMIT_NAME: HexLicSrv CI
       # GH_COMMIT_EMAIL: hexlicsrv@example.com
-      # Для SSH:
       # GH_SSH_PRIVATE_KEY: |-
       #   -----BEGIN OPENSSH PRIVATE KEY-----
       #   ...
       # GH_KNOWN_HOSTS: |-
       #   github.com ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAI...
 
-      # --- Releases mode (если SYNC_METHOD=releases) ---
-      # Метка релиза и отображаемое имя
-      # GH_RELEASE_TAG: hexlicsrv-snapshot
-      # GH_RELEASE_NAME: HexLicSrv FS Snapshot
-      # Для GitHub Enterprise можно переопределить эндпоинты:
+      # --- Releases mode ---
+      # GH_RELEASE_TAG: hexlicsrv
+      # GH_RELEASE_NAME: HexLicSrv
       # GH_API: https://ghe.example.com/api/v3
       # GH_UPLOAD: https://ghe.example.com/api/uploads
-
     volumes:
       - ./CA:/opt/hexlicsrv/CA
       - ./config:/opt/hexlicsrv/config
       - ./logs:/opt/hexlicsrv/logs
       - ./data:/opt/hexlicsrv/data
-
     ports:
       - "65434:65434"
