--- a/lumina/docker-compose.yml
+++ b/lumina/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.9"
 services:
   mysql:
     image: mysql:8.0
-    container_name: lumina-mysql
+    container_name: mysql
     restart: unless-stopped
     environment:
       MYSQL_DATABASE: "lumina"
@@ -50,14 +50,14 @@ services:
 
       # Shared options for both methods
       # GH_REMOTE: https://github.com/yourorg/yourrepo.git
-      # SYNC_HOST_ID: hexlicsrv
+      # SYNC_HOST_ID: lumina
       # SYNC_CHUNK_SIZE_MB: "49"
       # SYNC_AUTH_TOKEN: github_pat_token_here # required for write access/private repos
 
       # --- Commits mode ---
       # GH_BRANCH: main
-      # GH_COMMIT_NAME: HexLicSrv CI
-      # GH_COMMIT_EMAIL: hexlicsrv@example.com
+      # GH_COMMIT_NAME: Lumina CI
+      # GH_COMMIT_EMAIL: lumina@example.com
       # GH_SSH_PRIVATE_KEY: |-
       #   -----BEGIN OPENSSH PRIVATE KEY-----
       #   ...
@@ -65,8 +65,8 @@ services:
       #   github.com ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAI...
 
       # --- Releases mode ---
-      # GH_RELEASE_TAG: hexlicsrv
-      # GH_RELEASE_NAME: HexLicSrv
+      # GH_RELEASE_TAG: lumina
+      # GH_RELEASE_NAME: Lumina
       # GH_API: https://ghe.example.com/api/v3
       # GH_UPLOAD: https://ghe.example.com/api/uploads
     volumes:
