--- a/lumina/docker-compose.yml
+++ b/lumina/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 
 services:
   mysql:
-    image: mysql:8.0
+    image: mysql:8.0.40
     container_name: mysql
     restart: unless-stopped
     environment:
@@ -12,7 +12,7 @@ services:
       MYSQL_ROOT_PASSWORD: "rootpass"
     command: ["--default-authentication-plugin=mysql_native_password"]
     volumes:
-      - ./lumina/mysql:/var/lib/mysql
+      - ./db_data:/var/lib/mysql
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "127.0.0.1"]
       interval: 10s
